# Electrostatic-Sandbox

./: .gitattributes  .gitignore  LICENSE  README.md  _config.yml  docs.md  local.properties  settings.gradle
.fleet/: run.json  settings.json
electrostatic-sandbox-framework/: CMakeLists.txt  README.md
electrostatic-sandbox-framework/.fleet/: run.json
electrostatic-sandbox-framework/docs/: electrostatic-sdk.dot
electrostatic-sandbox-framework/docs/doxygen/: DOC-CONFIG
electrostatic-sandbox-framework/docs/system-build/: architecture.md
electrostatic-sandbox-framework/electrostatic-core/: CMakeLists.txt  README.md
electrostatic-sandbox-framework/electrostatic-core/src/include/electrostatic/algorithm/di/: info.txt
electrostatic-sandbox-framework/electrostatic-core/src/include/electrostatic/comm/: comm.h
electrostatic-sandbox-framework/electrostatic-core/src/include/electrostatic/electroio/electrokio/: ieee1284_module.h
electrostatic-sandbox-framework/electrostatic-core/src/include/electrostatic/electronetsoft/: arithmos_calculus.h
electrostatic-sandbox-framework/electrostatic-core/src/include/electrostatic/electronetsoft/comm/: comm.h
electrostatic-sandbox-framework/electrostatic-core/src/include/electrostatic/electronetsoft/util/: arithmos_data_structures.h  caller_graphs.h  types.h  utilities.h
electrostatic-sandbox-framework/electrostatic-core/src/include/electrostatic/util/errno/: errno.h
electrostatic-sandbox-framework/electrostatic-core/src/include/electrostatic/util/loader/: dll_loader.h
electrostatic-sandbox-framework/electrostatic-core/src/include/electrostatic/util/unit-testing/: unit_test.h
electrostatic-sandbox-framework/electrostatic-core/src/libelectrostatic/comm/: comm.c  comm_close.c  comm_finalize.c  comm_init.c  comm_open.c  init_protocol.c
electrostatic-sandbox-framework/electrostatic-core/src/libs/algorithm/ecs/: info.txt
electrostatic-sandbox-framework/electrostatic-core/src/libs/comm/: init_protocol.c
electrostatic-sandbox-framework/electrostatic-core/src/libs/electrostatic-primer/comm/: info.txt  init_protocol.c
electrostatic-sandbox-framework/electrostatic-core/src/libs/electrostatic-primer/electroio/electrokio/: ieee1284_module.c
electrostatic-sandbox-framework/electrostatic-core/src/libs/electrostatic-primer/electronetsoft/comm/: init_protocol.c
electrostatic-sandbox-framework/electrostatic-core/src/libs/electrostatic-primer/util/loader/: dll_loader.c
electrostatic-sandbox-framework/electrostatic-core/src/libs/electrostatic-primer/util/unit-testing/: unit_test.c
electrostatic-sandbox-framework/electrostatic-core/src/libs/electrostatic/algorithm/automata/: info.txt
electrostatic-sandbox-framework/electrostatic-core/src/libs/electrostatic/electronetsoft/comm/: init_protocol.c
electrostatic-sandbox-framework/electrostatic-core/src/libs/platform/mcu/: info.txt
electrostatic-sandbox-framework/electrostatic-core/src/libs/util/: info.txt
electrostatic-sandbox-framework/electrostatic-core/wiki/libelectrostatic/: README.md
electrostatic-sandbox-framework/electrostatic-examples/: CMakeLists.txt  README.md
electrostatic-sandbox-framework/electrostatic-examples/src/: hello_algorithm_visualizer.c  hello_comm.c  hello_dll_service.c  hello_dll_substrate.c  hello_file_verify.c  hello_graph.c  hello_lists.c  hello_switching_mux.c  hello_unittest.c  hello_vector2d.c  test_mat_product.c  test_matrix_subtraction.c  test_vec2d_rotation.c  test_vec3d_rotation.c
electrostatic-sandbox-framework/electrostatic-examples/src/calculus/: test_3d_gimbal_rotation.c  test_3d_x_gimbal_rotation.c  test_3d_z_gimbal_rotation.c  test_matrix_addition.c
electrostatic-sandbox-framework/electrostatic-examples/src/linux/: hello_dll_service.c  hello_dll_substrate.c  hello_file_read.c  hello_file_write.c  hello_kio_parport.c  hello_parport.c  hello_process_serialization.c
electrostatic-sandbox-framework/electrostatic-examples/src/mcu/avr/: hello_adc.c  hello_gpio_pollread.c  hello_gpio_write.c
electrostatic-sandbox-framework/electrostatic4j/: gradle.properties  settings.gradle
electrostatic-sandbox-framework/electrostatic4j/arithmos4j/arithmos4j-core/: build.gradle
electrostatic-sandbox-framework/electrostatic4j/arithmos4j/arithmos4j-examples/: build.gradle
electrostatic-sandbox-framework/electrostatic4j/electrostatic4j-core/: build.gradle
electrostatic-sandbox-framework/electrostatic4j/electrostatic4j-core/src/main/java/electrostatic4j/: NativeLibrary.java
electrostatic-sandbox-framework/electrostatic4j/electrostatic4j-examples/: build.gradle
electrostatic-sandbox-framework/electrostatic4j/electrostatic4j-native/: CMakeLists.txt  build.gradle
electrostatic-sandbox-framework/electrostatic4j/electrostatic4j-native/src/include/jni/: electrostatic4j_NativeLibrary.h
electrostatic-sandbox-framework/electrostatic4j/electrostatic4j-native/src/lib/jni/: electrostatic4j_NativeLibrary.c
electrostatic-sandbox-framework/electrostatic4j/helper-scripts/: compile-all.sh  compile-x86.sh  compile.sh  variables.sh
electrostatic-sandbox-framework/electrostatic4j/serial4j/: README.md
electrostatic-sandbox-framework/electrostatic4j/serial4j/serial4j-core/: build.gradle
electrostatic-sandbox-framework/electrostatic4j/serial4j/serial4j-native/: build.gradle
electrostatic-sandbox-framework/electrostatic4j/serial4j/serial4j-native/src/include/: JniUtils.h
electrostatic-sandbox-framework/electrostatic4j/serial4j/serial4j-native/src/include/jni/: com_serial4j_core_terminal_NativeTerminalDevice.h
electrostatic-sandbox-framework/helper-scripts/abstract/: abstract-compile-examples.sh  abstract-compile-javabinding.sh  abstract-compile.sh  abstract-util.sh
electrostatic-sandbox-framework/helper-scripts/ci-cd/: compile-e4j.sh  compile-electrostatic.sh  test-e4j.sh  test-electrostatic.sh
electrostatic-sandbox-framework/helper-scripts/project-impl/: compile-all-android.sh  compile-all.sh  compile-android.sh  compile-electrostatic.sh  compile-electrostatic4j.sh  compile-examples.sh  compile-x86.sh  run-serial4j-demo.sh  variables.sh
(+591 files in other folders)
